--- a/src/components/styles/formContact.css
+++ b/src/components/styles/formContact.css
@@ -14,7 +14,7 @@ form input{
     text-align: center;
     border-radius: 10px;
     font-size: 1.5em;
-    width: 30%;
+    width: 10em;
 }
 form button{
     background: none;
